# megaloader

./: .env.example  .gitignore  .python-version  README.md  build.sh  example.py  mise.toml  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  test.py  vercel.json
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  new-platform.yml
.github/workflows/: checks.yml  codeql.yml  deploy.yml  lint.yml  live.yml  pre-commit.yml  release-cli.yml  release-core.yml  security.yml  test.yml
api/: .env.example  README.md  api.py  config.py  downloads.py  extraction.py  local_server.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  responses.py  security.py  services.py  utils.py  validate-url.py
api/models/: __init__.py  models.py
api/services/: __init__.py  downloads.py  plugins.py  responses.py
apps/api/: index.py  pyproject.toml
apps/api/api/: config.py  downloads.py  extraction.py  formatters.py  security.py
apps/docs/: .gitignore  biome.json  package.json  readme.md
apps/docs/megaloader/: index.md
apps/docs/megaloader/.vitepress/: config.mts
apps/docs/megaloader/components/: announcement.vue
apps/docs/megaloader/development/: contributing.md
apps/docs/megaloader/guide/: advanced-patterns.md  cli.md  creating-plugins.md  getting-started.md  testing-plugins.md  using-the-library.md
apps/docs/megaloader/reference/: api.md  cli.md  options.md  platforms.md
demo/: README.md  manage.py  pyproject.toml
demo/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
demo/downloader/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
demo/templates/: base.html
demo/templates/downloader/: about.html  index.html
docs/: Demo.vue  README.md  biome.json  index.md  package.json
docs/api/: core.md  plugins.md
docs/cli/: commands.md  examples.md  overview.md
docs/core/: advanced-usage.md  api-reference.md  basic-usage.md  download-implementation.md  overview.md
docs/development/: contributing.md  creating-plugins.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: advanced-usage-2.md  advanced-usage.md  basic-usage.md  plugins.md
docs/megaloader/: index.md  team.md
docs/megaloader/.vitepress/: config.mts
docs/megaloader/.vitepress/theme/: index.ts  style.css
docs/megaloader/cli/: commands.md  examples.md  index.md  usage.md
docs/megaloader/components/: api-demo.vue  toast-container.vue
docs/megaloader/core/: advanced.md  api.md  basics.md  downloads.md
docs/megaloader/development/: contributing.md
docs/megaloader/getting-started/: index.md  installation.md  quickstart.md
docs/megaloader/guide/: advanced-patterns.md  advanced-usage.md  api-reference.md  basic-usage.md  cli-automation.md  cli-usage.md  cli.md  creating-plugins.md  download-implementation.md  downloading-files.md  getting-started.md  index.md  using-the-library.md
docs/megaloader/plugins/: creating-plugins.md  creating.md  index.md  options.md  platforms.md  plugin-options.md  supported-platforms.md
docs/megaloader/reference/: api.md  cli-commands.md  cli.md  options.md  platforms.md  plugin-options.md  plugin-platforms.md
docs/plugins/: creating-plugins.md  overview.md  plugin-options.md  supported-platforms.md
examples/: bunkr.py  cybderdrop.py  fanbox.py  fapello.py  gofile.py  pixiv.py
megaloader/: __init__.py  exceptions.py  http.py  magic_table.py  plugin.py  utils.py
megaloader/old_plugins/: fapello.py  thotslife.py
megaloader/plugins/: __init__.py  bunkr.py  cyberdrop.py  fanbox.py  fapello.py  gofile.py  pixeldrain.py  pixiv.py  rule34.py  thothub_to.py  thothub_vip.py  thotslife.py
plugins/: __init__.py  bunkr.py  cyberdrop.py  fanbox.py  fapello.py  gofile.py  pixeldrain.py  rule34.py  thothub_to.py  thothub_vip.py
sample/: readme.md
scripts/: README.md  generate-logo.py  readme.md  update-tool-versions.py  validate-code-snippets.py
tests/: conftest.py
tests/fixtures/: bunkr_real_file.html  cyberdrop_album.html  pixeldrain_real_file.html  pixeldrain_real_list.html
tests/integration/: test_bunkr_integration.py  test_cyberdrop_integration.py  test_gofile_integration.py  test_pixeldrain_integration.py
tests/live/: test_bunkr_live.py  test_cyberdrop_live.py  test_gofile_live.py  test_pixeldrain_live.py
tests/megaloader/plugins/: test_bunkr.py  test_cyberdrop.py  test_gofile.py  test_pixeldrain.py
tests/plugins/: test_bunkr.py  test_cyberdrop.py  test_gofile.py  test_pixeldrain.py
tests/unit/: test_http.py  test_plugin_base.py  test_sanitization.py
