[project]
name = "megaloader"
version = "0.1.0"
description = "This project will make you smile. It allows you to use some download plugins for many websites such as Cyberdrop, Fanbox, GoFile, Pixiv, Rule34, Thotslife, and so on..."

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "DURAND Malo", email = "malo.durand@epitech.eu" },
]
maintainers = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.0",
    "requests>=2.32.4",
]

[tool.ruff]
extend-exclude = [
    "megaloader/old_plugins*",
]
fix = true
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

extend-safe-fixes = [
    "TC",  # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
files = "megaloader"
mypy_path = "megaloader"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
    "megaloader/old_plugins*",
]
