[project]
name = "megaloader"
version = "0.1.0"
description = "This project will make you smile. It allows you to use some download plugins for many websites such as Cyberdrop, Fanbox, GoFile, Pixiv, Rule34, Thotslife, and so on..."

license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.10"

authors = [
    { name = "DURAND Malo", email = "malo.durand@epitech.eu" },
]
maintainers = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "requests-mock>=1.12.1",
]

[tool.setuptools]
packages = ["megaloader"]

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"

[tool.ruff.lint]
preview = true
extend-select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "COM", # flake8-commas
    "CPY", # flake8-copyright
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "ERA", # flake8-eradicate/eradicate
    "EXE", # flake8-executable
    "F",   # pyflakes
    "FA",  # flake8-future-annotations
    "FBT", # flake8-boolean-trap
    "FIX", # flake8-fixme
    "FLY", # flynt
    "FURB", # refurb
    "G",   # flake8-logging-format
    "I",   # isort
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N",   # pep8-naming
    "PGH", # pygrep
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP",  # pyupgrade
]

ignore = ["COM812", "TRY300", "CPY001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
files = "megaloader"
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]

[[tool.mypy.overrides]]
module = ["requests.*", "bs4.*"]
ignore_missing_imports = true
