[project]
name = "megaloader-api"
version = "0.1.0"
description = "FastAPI demo for Megaloader core library"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "chardet>=5.2.0", # caused by uvicorn, otherwise we have a warning
    "megaloader",
    "httpx>=0.28.1",
]

[tool.uv.sources]
megaloader = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"api" = "."}
packages = ["api"]
