[project]
name = "megaloader-demo"
version = "0.1.0"
description = "Django demo website for Megaloader"

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

dependencies = [
    "django>=5.1.0",
    "megaloader",
    "celery>=5.4.0",
    "redis>=5.0.0",
]

[tool.uv.sources]
megaloader = { workspace = true }

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
