[project]
name = "megaloader-demo"
requires-python = ">=3.10"

dependencies = [
    "django>=5.1.0",
    "megaloader",
]

[tool.uv.sources]
megaloader = { workspace = true }

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "downloader"]
