[project]
name = "megaloader-api"
version = "0.1.0"
description = "FastAPI demo for Megaloader core library"
readme = "readme.md"
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
    { name = "David Duran", email = "dadch1404@gmail.com" },
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "chardet>=5.2.0", # caused by uvicorn, otherwise we have a warning
    "httpx>=0.28.1",
    "megaloader>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff.lint.per-file-ignores]
"index.py" = ["INP001"]  # entry point for Vercel/uvicorn
